--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,10 @@
-<h1>{{appTitle}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+<div class="container">
+
+  <h1>{{siteTitle}} 🚀</h1>
+  <hr>
+  <p>La plataforma de aprendizaje de IronHack</p>
+  <p>Ahora con MÁS seguridad!</p>
+  <a href="/registro">Sign Up</a>
+  <a href="/iniciar-sesion">Log in</a>
+  <a href="/logout">Log out</a>
+</div>
