--- a/views/experiencias.hbs
+++ b/views/experiencias.hbs
@@ -1,1 +1,13 @@
-<h2>Hola, esta es la pagina experiencias</h2>
+<h2>experiencias list</h2>
+
+<div>
+  {{#each experiencias}}
+    <div style="border: solid 1px red">
+      {{titulo}}
+      {{texto}}
+      {{imagenes}}
+      {{filtro}}
+      <a href="/experiencias/{{_id}}">Visitar</a>
+    </div>
+  {{/each}}
+</div>
