--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,7 +8,7 @@
       <h1>Búsqueda de experiencias</h1>
     </header>
     <main>
-      <form action="/buscar" method="GET">
+      <form action="/search" method="GET">
         <div>
           <label for="pais">País:</label>
           <input type="text" id="pais" name="pais" />
@@ -67,6 +67,6 @@
   </body>
 </html>
 
-<a href="/experiencias/nueva" class="btn btn-dark">Añadir expericneica</a>
-<a href="/experiencias/vista" class="btn btn-dark">buscar</a>
-<a href="/experiencias/ajustes" class="btn btn-dark">ajustes</a>
+<a href="/myExperiences/new" class="btn btn-dark">Añadir expericneica</a>
+<a href="/search" class="btn btn-dark">buscar</a>
+<a href="/myExperiences/ajustes" class="btn btn-dark">ajustes</a>
