--- a/views/search.hbs
+++ b/views/search.hbs
@@ -8,8 +8,8 @@
     <h1>Listado de experiencias</h1>
   </header>
   <main>
-    <ul class="experiencias">
-      <li class="experiencia">
+    <ul class="experiences">
+      <li class="experience">
         <div class="imagen">
           <img
             src="https://via.placeholder.com/150x150"
@@ -28,8 +28,8 @@
     </ul>
   </main>
   <footer>
-    <p>Copyright ©
+    <p>Fecha:
       <script>document.write(new Date().getFullYear())</script>
-      - Todos los derechos reservados</p>
+    </p>
   </footer>
 </body>
