--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,40 +11,42 @@
 </head>
 
 <body>
+ {{!-- para acceder a la imagen de favicon , es "../" --}}
+ <div>
+    <img src="../favicon.png" alt="Trotamundoss" width="50" height="50">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+       <a class="navbar-brand" href="/">{{siteTitle}}</a>
+       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+       </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          {{!-- <li class="nav-item">
+            <a class="nav-link" href="/">Inicio</a>
+          </li> --}}
+          {{#if users.username}} 
 
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-   <div class="container-fluid">
-    <a class="navbar-brand" href="/">{{siteTitle}}</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="/">Inicio</a>
-        </li>
-        {{#if users.username}} 
-
-            <li class="nav-item">
-              <form action="/cerrar-sesion" method="POST">
-                 <button class="nav-link">Logout</button>
-              </form> 
-            </li>
-            {{else}}
-            <li class="nav-item">
-              <a class="nav-link" href="/registro">Registro</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/iniciar-sesion">Iniciar sesión</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/users">Usuarios</a>
-            </li>
-        {{/if}} 
-
+              <li class="nav-item">
+                <form action="/cerrar-sesion" method="POST">
+                  <button class="nav-link">Logout</button>
+                </form> 
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/myExperiences">Mis experiencias</a>
+              </li>
+              {{else}}
+              <li class="nav-item">
+                <a class="nav-link" href="/registro">Registro</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/iniciar-sesion">Iniciar sesión</a>
+              </li>
+          {{/if}} 
+      </div>
     </div>
-  </div>
-</nav>
+    </nav>
+</div>
 
 
    {{{body}}}
