--- a/views/myExperiences.hbs
+++ b/views/myExperiences.hbs
@@ -1,13 +1,13 @@
 <h2>experiencias list</h2>
 
 <div>
-  {{#each experiencias}}
+  {{#each experiences}}
     <div style="border: solid 1px red">
       {{titulo}}
       {{texto}}
       {{imagenes}}
       {{filtro}}
-      <a href="/experiencias/{{_id}}">Visitar</a>
+      <a href="/myExperiences/{{_id}}">Visitar</a>
     </div>
   {{/each}}
 </div>
