--- a/views/home.hbs
+++ b/views/home.hbs
@@ -67,6 +67,6 @@
   </body>
 </html>
 
-<a href="/myExperiences/new" class="btn btn-dark">Añadir expericneica</a>
+<a href="/myExperiences/new" class="btn btn-dark">Añadir experiencia</a>
 <a href="/search" class="btn btn-dark">buscar</a>
 <a href="/myExperiences/ajustes" class="btn btn-dark">ajustes</a>
