Create reseñas not working

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -68,5 +68,6 @@
 </html>
 
 <a href="/myExperiences/new" class="btn btn-dark">Añadir experiencia</a>
+<a href="/myReviews/create" class="btn btn-dark">Añadir reseña</a>
 <a href="/search" class="btn btn-dark">buscar</a>
 <a href="/myExperiences/ajustes" class="btn btn-dark">ajustes</a>
