--- a/views/home.hbs
+++ b/views/home.hbs
@@ -56,18 +56,12 @@
   </body>
 </html>
 
-
-
-
-
-
-
+<a href="/myExperiences/new" class="btn btn-dark">Añadir experiencia</a>
+<a href="/search" class="btn btn-dark">buscar</a>
+<a href="/user/{{user._id}}" class="btn btn-dark">ajustes</a>
 
     </main>
   </body>
 </html>
 
-<a href="/myExperiences/new" class="btn btn-dark">Añadir experiencia</a>
-<a href="/myReviews/create" class="btn btn-dark">Añadir reseña</a>
-<a href="/search" class="btn btn-dark">buscar</a>
-<a href="/myExperiences/ajustes" class="btn btn-dark">ajustes</a>
+
