--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,7 @@
 <body>
  {{!-- para acceder a la imagen de favicon , es "../" --}}
  <div>
-    <img src="../favicon.png" alt="Trotamundoss" width="50" height="50">
+    <img src="/favicon.png" alt="Trotamundoss" width="50" height="50">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
        <a class="navbar-brand" href="/">{{siteTitle}}</a>
@@ -25,7 +25,7 @@
           {{!-- <li class="nav-item">
             <a class="nav-link" href="/">Inicio</a>
           </li> --}}
-          {{#if users.username}} 
+          {{#if user.username}} 
 
               <li class="nav-item">
                 <form action="/cerrar-sesion" method="POST">
