--- a/views/myReviews.hbs
+++ b/views/myReviews.hbs
@@ -1,7 +1,7 @@
 <h2>Reviews list</h2>
 hola
 <div>
-  {{#each review}}
+  {{#each reviews}}
     <div style="border: solid 1px red">
       {{title}}
       {{rating}}
