--- a/views/reviewNew.hbs
+++ b/views/reviewNew.hbs
@@ -8,20 +8,20 @@
       <h1>Nueva reseña</h1>
     </header>
     <main>
-      <form action="/myReviews/create" method="POST">
+      <form action="/myExperiences/{{experienceId}}/reviews/new" method="POST">
         <div>
           <label for="title">Título:</label>
-          <input type="text" id="titulo" name="title" />
+          <input type="text" id="title" name="title" />
         </div>
         <div>
-          <label for="texto">Comentario:</label>
-          <textarea type="text" id="texto" name="comment" rows="10"></textarea>
+          <label for="comment">Comentario:</label>
+          <textarea type="text" id="comment" name="comment" rows="10"></textarea>
         </div>
-       <div>
-          <label for="rating">Puntuacion:</label>
-          <textarea type="number" id="rating" name="rating" ></textarea>
+        <div>
+          <label for="rating">Rating:</label>
+          <input type="number" id="rating" name="rating" min="0" max="10"></input>
         </div>
-        
+
         <div>
           <button type="submit">Crear Reseña</button>
         </div>
