reseñas finalizado, imagenes en proceso , subido a produccion

--- a/views/experienceEdit.hbs
+++ b/views/experienceEdit.hbs
@@ -26,13 +26,12 @@
           >{{experience.texto}}</textarea>
         </div>
         <div>
-          <label for="imagenes">Imágenes:</label>
+          <label for="imagen">Imágenes:</label>
           <input
             type="file"
-            id="imagenes"
-            name="imagenes"
+            id="imagen"
+            name="imagen"
             accept="image/*"
-            multiple
           />
         </div>
         <div>
