--- a/views/experienceDetails.hbs
+++ b/views/experienceDetails.hbs
@@ -5,7 +5,7 @@
     {{experience.id}}
     {{experience.titulo}}
     {{experience.texto}}
-    {{experience.imagenes}}
+    <img src="{{experiencie.imagen}}" alt="">
     {{experience.filtro}}
     {{!-- // este lo saco del objeto experienciade arriba// --}}
     <a href="/myExperiences/{{experience.id}}/edit">edit</a>
