--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -35,6 +35,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="/myExperiences">Mis experiencias</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/search-places">Buscar sitios</a>
+              </li>
+
               {{else}}
               <li class="nav-item">
                 <a class="nav-link" href="/registro">Registro</a>
@@ -42,6 +46,8 @@
               <li class="nav-item">
                 <a class="nav-link" href="/iniciar-sesion">Iniciar sesión</a>
               </li>
+
+              
           {{/if}} 
       </div>
     </div>
