--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,13 +1,12 @@
-<div class="container">
-
-  <div class="row justify-content-center">
-
-    <div class="col-md-6">
-
+<body>
+  <div class="container">
+    <div class="logo-container">
+      <img src="ruta_del_logo" alt="Logo" />
+    </div>
+    <div class="form-container">
       <h1>Inicio de sesión</h1>
       <hr />
-
-      <form action="/iniciar-sesion" method="POST">
+      <form class="form-login" action="/iniciar-sesion" method="POST">
         <div class="mb-3">
           <label for="emailInput" class="form-label">Dirección de email</label>
           <input
@@ -28,7 +27,7 @@
           />
         </div>
 
-        <div class="d-grid gap-2">
+        <div class="d-grid">
           <button type="submit" class="btn btn-dark block">Acceder</button>
         </div>
 
@@ -41,5 +40,5 @@
       </form>
     </div>
   </div>
-
-</div>
+</body>
+<link rel="stylesheet" href="styles.css" />
