--- a/views/experienceSearch.hbs
+++ b/views/experienceSearch.hbs
@@ -19,7 +19,7 @@
         <select name="category" >
             <option value="attraction">Atracción</option>
             <option value="restaurant">Restaurante</option>
-            <option value="POI">Punto de interés</option>
+            <option value="poi">Punto de interés</option>
             <option value="">Ninguna</option>
         </select>
     </label>
