--- a/views/createExperienceAPI.hbs
+++ b/views/createExperienceAPI.hbs
@@ -10,7 +10,7 @@
         <h1>Nueva experiencia</h1>
     </header>
     <main>
-        <form action="/create-experience-with-api" method="POST">
+        <form action="/create-experience-with-api" method="POST" enctype="multipart/form-data">
             <div>
                 <label for="titulo">Título:</label>
                 <input type="text" id="titulo" name="titulo" />
@@ -33,7 +33,7 @@
                     <option value="precio">Precio</option>
                 </select>
             </div>
-        
+        {{!-- GUARDO LOS DATOS QUE ME DEVUELVE LA API --}}
             <input type="text" name="name" value="{{body.name}}">
             <input type="text" name="address" value="{{body.address}}">
             <input type="text" name="lat" value="{{body.lat}}">
