--- a/views/experienceSearch.hbs
+++ b/views/experienceSearch.hbs
@@ -19,7 +19,7 @@
         <select name="category" >
             <option value="attraction">Atracción</option>
             <option value="restaurant">Restaurante</option>
-            <option value="poi">Punto de interés</option>
+            <option value="POI">Punto de interés</option>
             <option value="">Ninguna</option>
         </select>
     </label>
@@ -29,6 +29,25 @@
     </label>
     <button type="submit">Buscar sitio</button>
 </form>
+
+<script src="/js/map.utility.js"></script>  
+
+{{!-- ahora mismo no esta haciendo nada --, era para usar una funcion}}
+
 {{!-- 
-Comentario: Se lo pasamos a las rutas
- --}}
+OPCION PAIS Y CIUDAD --}}
+{{!-- <h1>Busca tu sitio</h1>
+<form action="/search-places" method="get">
+  <label for="location">
+    País
+    <select name="location" onchange="this.form.submit()">
+      {{#each countries}}
+        <option value="{{this}}">{{this}}</option>
+      {{/each}}
+    </select>
+  </label>
+  <label for="name">
+    Nombre del sitio
+    <input type="text" name="name" />
+  </label>
+  <button type="submit">Buscar sitio</button> --}}
