--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-/* body {
+body {
   margin: 0;
   padding: 0;
   background: linear-gradient(to bottom right, #aed6f1, #98ddc5);
@@ -9,89 +9,19 @@
   justify-content: center;
   align-items: center;
 }
- .container-nav{
+
+.container-nav {
   width: 100%;
- }
+
+}
+.nav
+
 .container {
+  height: 80%;
+  display: flex;
   justify-content: space-between;
-  display: flex;
-  flex-grow: 1;
-  display: flex;
   align-items: center;
   padding: 0 150px;
-}
-
-.container-main {
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0px 150px;
-  PADDING-TOP: 200px;
-}
-
-.columna {
-  flex: 1;
-  background-color: white;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.columna-experience {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-form {
-  flex-grow: 1;
-}
-
-.form-container {
-      width: 40%;
-        height: 80%;
-  background-color: white;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
-}
-
-button[type="submit"] {
-  padding: 12px 24px;
-  transition: background-color 0.3s ease;
-}
-
-button[type="submit"]:hover {
-  background-color: #00e1ff;
-}
-
-.container-main .columna,
-.container-main .columna-experience {
-  width: 50%;
-}
-
-.container-signup {
-      width: 40%;
-    height: 100%;
-  background-color: white;
-  padding: 20px;
-  border-radius: 20px;
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
-}
-
-h2 {
-  text-align: center;
-}
-
-.container {
-  display: flex;
-  align-items: center;
-  padding: 20px;
 }
 
 .container-main {
@@ -100,10 +30,13 @@ h2 {
   align-items: flex-start;
   flex-wrap: wrap;
   padding: 20px;
-  PADDING-TOP: 100px;
+  padding-top: 100px;
 }
 
 .columna {
+  text-align: center;
+  width: 100%;
+  height: 100%;
   flex: 0 0 30%;
   background-color: white;
   padding: 20px;
@@ -120,7 +53,6 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  
 }
 
 .experience-izquierda {
@@ -131,14 +63,27 @@ h2 {
   border-radius: 20px;
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
-    padding: 20px;
-    background-color: white;
+  padding: 20px;
+  background-color: white;
 }
 
 .buttons-experience {
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
+}
+
+.buttons-experience a {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #f1f1f1;
+  color: #333;
+  text-decoration: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+
 }
 
 .button {
@@ -178,185 +123,48 @@ h2 {
 .button-info {
   background-color: #1e90ff;
 }
-.title-experienceDetails{
-  padding-top: 100px;
-}
-.reviews{
-  border-radius: 20px;
-    padding: 20px;
-    background-color: white;
-}
-.details-user{
-  background-color: white;
-    padding: 20px;
-    border-radius: 20px;
-    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
-}
- */
 
- body {
-   margin: 0;
-   padding: 0;
-   background: linear-gradient(to bottom right, #aed6f1, #98ddc5);
-   font-family: Arial, sans-serif;
-   height: 100vh;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
- }
-
- .container-nav {
-   width: 100%;
- }
-
- .container {
-  height: 80%;
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   padding: 0 150px;
- }
-
- .container-main {
-   display: flex;
-   justify-content: space-between;
-   align-items: flex-start;
-   flex-wrap: wrap;
-   padding: 20px;
-   padding-top: 100px;
- }
-
- .columna {
-  text-align: center;
-    width: 100%;
-    height: 100%;
-   flex: 0 0 30%;
-   background-color: white;
-   padding: 20px;
-   border-radius: 20px;
-   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
-   margin-bottom: 20px;
- }
-
- .columna:last-child {
-   margin-bottom: 0;
- }
-
- .container-reviews {
-   display: flex;
-   justify-content: center;
-   align-items: flex-start;
- }
-
- .experience-izquierda {
-   flex-direction: column;
-   display: flex;
-   border: solid 1px black;
-   padding: 20px;
-   border-radius: 20px;
-   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
-   border-radius: 20px;
-   padding: 20px;
-   background-color: white;
- }
-
- .buttons-experience {
-   display: flex;
-   justify-content: space-between;
-   margin-top: 10px;
- }
- .buttons-experience a {
-    display: inline-block;
-      padding: 10px 20px;
-      background-color: #f1f1f1;
-      color: #333;
-      text-decoration: none;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-      
- }
-
- .button {
-   padding: 8px 16px;
-   background-color: #00e1ff;
-   color: white;
-   border: none;
-   border-radius: 20px;
-   cursor: pointer;
-   transition: background-color 0.3s ease;
- }
-
- .button:hover {
-   background-color: #00b8d4;
- }
-
- .button-primary {
-   background-color: #00e1ff;
- }
-
- .button-secondary {
-   background-color: #ff7f50;
- }
-
- .button-success {
-   background-color: #32cd32;
- }
-
- .button-danger {
-   background-color: #ff0000;
- }
-
- .button-warning {
-   background-color: #ffa500;
- }
-
- .button-info {
-   background-color: #1e90ff;
- }
-
- .container-signup,
- .form-container,
- .container-details {
+.container-signup,
+.form-container,
+.container-details {
   width: 60%;
   height: 100%;
-   background-color: white;
-   padding: 20px;
-   border-radius: 20px;
-   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
- }
+  background-color: white;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+}
 
- .form-container form,
- .container-signup form,
- .container-details form {
-   flex-grow: 1;
- }
+.form-container form,
+.container-signup form,
+.container-details form {
+  flex-grow: 1;
+}
 
- h2 {
-   text-align: center;
- }
+h2 {
+  text-align: center;
+}
 
- .details-user {
-   background-color: white;
-   padding: 20px;
-   border-radius: 20px;
-   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
- }
+.details-user {
+  background-color: white;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+}
 
- .details-user img {
-   float: right;
-   max-width: 100%;
-   height: auto;
-   margin-left: 20px;
- }
+.details-user img {
+  float: right;
+  max-width: 100%;
+  height: auto;
+  margin-left: 20px;
+}
 
- .title-experienceDetails {
-   padding-top: 100px;
- }
+.title-experienceDetails {
+  padding-top: 100px;
+}
 
- .reviews {   border-radius: 20px;
+.reviews {
+  border-radius: 20px;
   padding: 20px;
   background-color: white;
 }
@@ -418,22 +226,28 @@ button[type="submit"]:hover {
   align-items: flex-start;
   padding: 20px;
 }
-.col-md-6{
-    width: 100%;
+
+.col-md-6 {
+  width: 100%;
 }
-.container-main{
-      width: 100%;
-          justify-content: space-evenly;
+
+.container-main {
+  width: 100%;
+  justify-content: space-evenly;
 }
-.form-container h1{
+
+.form-container h1 {
   padding-bottom: 30px;
 }
-.form-login{
+
+.form-login {
   padding-top: 50px;
 }
+
 .edit-user,
-.details-reviews a ,.columna div a{
-display: inline-block;
+.details-reviews a,
+.columna div a {
+  display: inline-block;
   padding: 10px 20px;
   background-color: #f1f1f1;
   color: #007bff;
@@ -447,16 +261,17 @@ display: inline-block;
 
 .edit-user:hover,
 .details-reviews a:hover {
-background-color: #6aa7e9;
+  background-color: #6aa7e9;
   /* Color azul más fuerte al pasar el cursor */
   color: #fff;
   /* Color de texto blanco al pasar el cursor */
   text-decoration: none;
 }
+
 a,
 button {
   color: #6aa7e9;
- 
+
   /* Color azul suave */
 }
 
@@ -465,5 +280,35 @@ button:hover {
   color: #0056b3;
   /* Color azul suave más oscuro al pasar el cursor */
 }
+.results-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+}
 
+.result-card {
+  background-color: #f1f1f1;
+  padding: 20px;
+  border-radius: 5px;
+}
 
+.result-card hr {
+  margin: 10px 0;
+  border: none;
+  border-top: 1px solid #ccc;
+}
+
+.result-card input[type="text"],
+.result-card button[type="submit"] {
+  display: none;
+}
+
+.result-card a {
+  text-decoration: none;
+}
+
+@media (max-width: 768px) {
+  .results-container {
+    grid-template-columns: 1fr;
+  }
+}
