--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,14 +6,17 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>{{siteTitle}}</title>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">   
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">   
    <link rel="stylesheet" href="/stylesheets/style.css" />
+   {{!-- link mapa --}}
+<link href='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css' rel='stylesheet' /> 
+
 </head>
 
 <body>
  {{!-- para acceder a la imagen de favicon , es "../" --}}
- <div class="container-nav">
-   
+ <div>
+    <img src="/favicon.png" alt="Trotamundoss" width="50" height="50">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
        <a class="navbar-brand" href="/">{{siteTitle}}</a>
@@ -36,8 +39,9 @@
                 <a class="nav-link" href="/myExperiences">Mis experiencias</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/user/{{user._id}}">Mis ajustes</a>
+                <a class="nav-link" href="/search-places">Buscar sitios</a>
               </li>
+
               {{else}}
               <li class="nav-item">
                 <a class="nav-link" href="/registro">Registro</a>
@@ -45,6 +49,8 @@
               <li class="nav-item">
                 <a class="nav-link" href="/iniciar-sesion">Iniciar sesión</a>
               </li>
+
+              
           {{/if}} 
       </div>
     </div>
