--- a/views/reviewNew.hbs
+++ b/views/reviewNew.hbs
@@ -8,8 +8,8 @@
       <h1>Nueva reseña</h1>
     </header>
     <main>
-      <form action="/myExperiences/{{experienceId}}/reviews/new" method="POST" enctype="multipart/form-data">
-        <div> 
+      <form action="/myExperiences/{{experienceId}}/reviews/new" method="POST">
+        <div>
           <label for="title">Título:</label>
           <input type="text" id="title" name="title" />
         </div>
@@ -21,17 +21,6 @@
           <label for="rating">Rating:</label>
           <input type="number" id="rating" name="rating" min="0" max="10"></input>
         </div>
-         <div>
-          <label for="imagen">Imágenes:</label>
-          <input
-            type="file"
-            id="imagen"
-            name="imagen"
-            accept="image/*"
-            max="5"
-          />
-        </div>
-        
 
         <div>
           <button type="submit">Crear Reseña</button>
