--- a/views/search-places-results.hbs
+++ b/views/search-places-results.hbs
@@ -10,10 +10,13 @@
       <input type="text" name="address" value="{{address}}" hidden />
       <p>category: {{category}}</p>
       <p>location: {{location}}</p>
+      {{! me devuelve bien los datos de long y latitud }}
+      <p>lat: {{lat}}</p>
+      <p>lng: {{lng}}</p>
       <p>number of reviews: {{numReviews}}</p>
       <p>Details: <a href="{{details}}">Ver detalles</a></p>
       <canvas id="myChart"></canvas>
-      <div id="map-{{@index}}" style="width: 100%; height: 400px;"></div>
+      <div id="map-{{lat}}/{{lng}}" style="width: 100%; height: 400px;"></div>
 
       {{! <div
         id="map"
@@ -26,21 +29,7 @@
       </form>
     </div>
   {{/each}}
-
 </div>
+
 <script src="/js/create-map.js"></script>
-<script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
-<link
-  href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css"
-  rel="stylesheet"
-/>
-<script
-  src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"
-></script>
-<link
-  rel="stylesheet"
-  href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css"
-  type="text/css"
-
-/>
-
+<script src="/js/chart.js"></script>
