--- a/views/myReviews.hbs
+++ b/views/myReviews.hbs
@@ -1,8 +1,8 @@
 <h2>Reviews list</h2>
 hola
-<div>
+<div class="marco">
   {{#each reviews}}
-    <div >
+    <div class="marco">
       {{title}}
       {{rating}}
       {{comment}}
