--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,5 +1,7 @@
 <div class="container">
-
+  <div id="logo">
+    
+  </div>
   <div class="row justify-content-center">
 
     <div class="col-md-6">
