--- a/views/experienceSearch.hbs
+++ b/views/experienceSearch.hbs
@@ -1,4 +1,5 @@
 <h1>Busca tu sitios</h1>
+<div class="marco" >
 <form action="/search-places" method="post">
     <label for="location">
         Ciudad
@@ -29,6 +30,7 @@
     </label>
     <button type="submit">Buscar sitio</button>
 </form>
+</div>
 
 <script src="/js/map.utility.js"></script>  
 
