--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,9 +16,10 @@
 
 <body>
  {{!-- para acceder a la imagen de favicon , es "../" --}}
- <div>
-    <img src="/favicon.png" alt="Trotamundoss" width="50" height="50">
+ <div id="nav">
+   
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+       <img src="/favicon.png" alt="Trotamundoss" width="50" height="50">
     <div class="container-fluid">
        <a class="navbar-brand" href="/">{{siteTitle}}</a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,6 +42,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/search-places">Buscar sitios</a>
+              </li>
+              <li class="nav-item">
+                <a href="/user/{{user._id}}" class="btn btn-dark">ajustes</a>
               </li>
 
               {{else}}
