--- a/views/myExperiences.hbs
+++ b/views/myExperiences.hbs
@@ -1,8 +1,8 @@
 <h2>Experiences list</h2>
 
-<div>
+<div class="marco">
   {{#each experiences}}
-    <div >
+    <div class="marco" >
       {{titulo}}
       {{texto}}
       {{imagenes}}
