--- a/views/reviewDetails.hbs
+++ b/views/reviewDetails.hbs
@@ -1,3 +1,4 @@
+<di class="marco">
 <h1>Detalles de la reseña</h1>
 <h3>{{review._id}}</h3>
 <h3>{{review.userId}}</h3>
@@ -18,3 +19,4 @@
 >
   <button type="submit">editar</button>
 </form>
+ </div>
