--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -40,9 +40,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/myExperiences">Mis experiencias</a>
               </li>
-              <li class="nav-item">
+              {{!-- <li class="nav-item">
                 <a class="nav-link" href="/search-places">Buscar sitios</a>
-              </li>
+              </li> --}}
               <li class="nav-item">
                 <a href="/user/{{user._id}}" class="btn btn-dark">ajustes</a>
               </li>
