--- a/views/experienceDetails.hbs
+++ b/views/experienceDetails.hbs
@@ -34,19 +34,19 @@
   {{/each}}
 
 </div>
-<script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
-<link
-  href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css"
+{{!-- <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script> --}}
+{{!-- <link --}}
+  {{!-- href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css"
   rel="stylesheet"
-/>
+/> --}}
 <script
   src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"
 ></script>
-<link
+{{!-- <link
   rel="stylesheet"
   href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css"
   type="text/css"
-/>
+/> --}}
 <script src="/js/create-map.js"></script>
 {{! 
  //todos los js para crear el mapa// }}
