--- a/views/search-places-results.hbs
+++ b/views/search-places-results.hbs
@@ -17,11 +17,7 @@
       <p>Details: <a href="{{details}}">Ver detalles</a></p>
       <canvas id="myChart"></canvas>
       <div id="map-{{lat}}/{{lng}}" style="width: 100%; height: 400px;"></div>
-
-      {{! <div
-        id="map"
-        style=" margin-left: 500px; height: 400px; width:600px;"
-      ></div> }}
+      console.log({{lat}}/{{lng}})
       <form action="/create-experience-with-api" method="post">
         {{!-- <input type="text" name="lat" value="{{lat}}" hidden />
       <input type="text" name="lng" value="{{lng}}" hidden /> --}}
